<resources>
    <string name="app_name">Zapgrupos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Zapgrupos</string>
    <string name="nav_header_subtitle" translatable="false"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="adicionar_grupo">Feature is not avaibled</string>
    <string name="menu_home">Groups list</string>
    <string name="menu_gallery">Add new group</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_nav">Groups List</string>
    <string name="title_gerar_link">Generate shareable link</string>
    <string name="title_mensagem_sem_contato">Contactless contact</string>
    <string name="menu_adicionar_grupo">Add new group</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imput_link">Link</string>
    <string name="imput_descricao">Description</string>
    <string name="imput_telefone">Number Phone</string>
    <string name="imput_email">Email</string>
    <string name="menu_pais">Country</string>
    <string name="mensagem_sucesso">Your group has been successfully added! Do you wanna to see it?</string>
    <string name="menu_categoria">Category</string>
    <string name="menu_tipo">Social network</string>
    <string name="n_mero">Number Phone</string>
    <string name="texto">Text</string>
    <string name="copiar_link">Copy</string>
    <string name="compartilhar">Share</string>
    <string name="numero_helper">Put your phone number</string>
    <string name="texto_compartilhar">Text that you wanna to share</string>
    <string name="abrir_contato">Open contact</string>
    <string name="helper_numero">Fill with your cellphone that you wanna to talk</string>
    <string name="sim">Yes</string>
    <string name="nao">No</string>
    <string name="oko" translatable="false">Ok</string>
    <string name="sucessoo" translatable="false">Denuncia feita com sucesso.</string>
    <string name="msg_token_fmt">\"TOKEN DO FIREBASE\"</string>
    <string name="net_work_error">Network fail. Verify your Internet and Retry again.</string>
    <string name="pub_id" translatable="false">ca-app-pub-8817634033676287~7981741263</string>
    <string name="banner_ad_unit_id" translatable="false">/22764566987/509d0918-53bf-4e57-acf1-eed3b5f4ba67</string>
    <string name="banner_ad_unit_id_intersticial" translatable="false">/22764566987/509d0918-53bf-4e57-acf1-eed3b5f4ba67</string>
    <string name="carregando" translatable="false">Por favor, aguarde...</string>
    <string name="aguarde" translatable="false">aguarde</string>
    <string name="parse" translatable="false">3</string>
    <string name="facebook_app_id" translatable="false">740335096981400</string>
    <string name="channel_name" translatable="false">canal_1</string>
    <string name="channel_description_1" translatable="false">canal para mensagens padrão</string>
    <string name="channel_id" translatable="false">1</string>
    <string name="appodeal_token" translatable="false">"9a5225bb3fa25d42bdb59c539feb45278ff3763b626805d9"</string>
    <string name="title_assinar" translatable="false">Remover Anúncios</string>
    <string name="assinar_1" translatable="false">Remover anúncios por 1 semana</string>
    <string name="assinar_2" translatable="false">Remover anúncios por 1 mês</string>
    <string name="assinar_3" translatable="false">Remover anúncios por 3 meses</string>
    <string name="info_assinatura" translatable="false">Informações Assinatura</string>
    <string name="contact" translatable="false">Em caso de dúvidas, falhas ou se precisar de ajuda entre em contato por:</string>
    <string name="email" translatable="false">E-mail: contato@mgjobs.cf</string>
    <string name="billing">"Não detectamos a uma versão recente do google play store ou você não está logado em uma conta google. Para poder remover os anúncios, tente resolver alguns dos problemas citados e reinicie o app. "</string>

</resources>