<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.GerarLink.GerarLinkFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/numero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginHorizontal="8dp"
                app:helperText="@string/numero_helper"
                app:helperTextEnabled="true"
                app:boxStrokeColor="@color/mtlr_filled_strock_color"
                app:hintTextColor="@color/mtlr_filled_strock_color"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/numeroImput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/n_mero"
                    android:inputType="number"
                    android:textCursorDrawable="@drawable/cursor_color"

                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/texto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginHorizontal="8dp"
                app:helperText="@string/texto_compartilhar"
                app:helperTextEnabled="true"
                app:boxStrokeColor="@color/mtlr_filled_strock_color"
                app:hintTextColor="@color/mtlr_filled_strock_color"
                app:counterEnabled="true"
                app:counterMaxLength="300"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textoImput"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:hint="@string/texto"
                    android:textCursorDrawable="@drawable/cursor_color"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/compartilharLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/compartilhar"
                android:textColor="@color/mtlr_btn_text_color_selector"
                app:boxStrokeColor="@color/mtlr_filled_strock_color"
                app:hintTextColor="@color/mtlr_filled_strock_color"
                />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>