<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.MensagemSemContato.MenagemSemContatoFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/numero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginHorizontal="8dp"
                app:helperText="@string/helper_numero"
                app:helperTextEnabled="true"
                app:boxStrokeColor="@color/mtlr_filled_strock_color"
                app:hintTextColor="@color/mtlr_filled_strock_color"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/numeroImput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:hint="@string/n_mero" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/abrirContato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/abrir_contato"
                android:textColor="@color/mtlr_btn_text_color_selector"
                app:boxStrokeColor="@color/mtlr_filled_strock_color"
                app:hintTextColor="@color/mtlr_filled_strock_color"
                />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>